[package]
name = "fn_lib_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
syn = {version = "2.0.70", features = ["full", "extra-traits"] }
quote = "1.0.36"
